Dtos nuevos agregados, pendiente solucion bug tags